--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <!-- add a skip link that skips to the main content -->
+  <a href="#main">Skip to content</a>
 <!-- add correct heading levels -->
   <header>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="#007BFF" stroke-linecap="round" stroke-linejoin="round" width="75" height="75" stroke-width="1.5">
@@ -22,24 +23,26 @@
     <a href="#">Join Now</a>
 <!-- add alt text where necessary -->
 <!-- add responsive images for resolution switching -->
-    
-      src="images/facility.jpg"
-
+    <picture>
+      <source media="(min-width: 1920px)" srcset="images/facility.jpg">
+      <source media="(min-width: 768px)" srcset="images/facility-768w.jpg">
+      <img src="images/facility-320w.jpg" alt="black and white picture of a gym with lots of different exercise equipment">
+    </picture>
   </header>
   <nav>
     <h2>Main Navigation</h2>
     <ul>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Classes</a></li>
-      <li><a href="#">Personal Training</a></li>
-      <li><a href="#">Membership Options</a></li>
-      <li><a href="#">Testimonials</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="#aboutUs">About Us</a></li>
+      <li><a href="#classes">Classes</a></li>
+      <li><a href="#personalTraining">Personal Training</a></li>
+      <li><a href="#membershipOpt">Membership Options</a></li>
+      <li><a href="#testimonials">Testimonials</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
-  <main>
+  <main id="main">
     <section>
-      <h2>About Us</h2>
+      <h2 id="aboutUs">About Us</h2>
       <p>Welcome to Limitless Fitness, where fitness meets community. Our state-of-the-art facility is designed to inspire and support you at every stage of your journey. Whether you're a beginner or a seasoned athlete, our expert trainers and diverse classes provide the perfect environment to achieve your personal best.</p>
       <section>
         <h3>What Sets Us Apart</h3>
@@ -52,7 +55,7 @@
       </section>
     </section>
     <section>
-      <h2>Our Classes</h2>
+      <h2 id="classes">Our Classes</h2>
       <p>Discover a wide variety of classes designed to challenge and energize you.</p>
       <ul>
         <li>HIIT & Cardio: Boost your endurance and burn calories.</li>
@@ -63,11 +66,14 @@
       </ul>
 <!-- add alt text where necessary -->
 <!-- add responsive images for resolution switching -->
-        src="images/classes.jpg"
-
+      <picture>
+        <source media="(min-width: 1920px)" srcset="images/classes.jpg">
+        <source media="(min-width: 768px)" srcset="images/classes-768w.jpg">
+        <img src="images/classes-320w.jpg" alt="black and white picture of three people working out, doing weighted squats">
+      </picture>
     </section>
     <section>
-      <h2>Personal Training</h2>
+      <h2 id="personalTraining">Personal Training</h2>
       <p>
         Take your fitness to the next level with our one-on-one training sessions. Our certified trainers work with you to create a customized plan that fits your lifestyle and targets your specific goals.
         Ready for a change?
@@ -75,11 +81,14 @@
       <a href="#">Book a Free Consultation today!</a>
 <!-- add alt text where necessary -->
 <!-- add responsive images for resolution switching -->
-        src="images/dumbells.jpg"
-
+      <picture>
+        <source media="(min-width: 1920px)" srcset="images/dumbells.jpg">
+        <source media="(min-width: 768px)" srcset="images/dumbells-768w.jpg">
+        <img src="images/dumbells-320w.jpg" alt="black and white picture of a large amount of dumbells on a rack">
+      </picture>
     </section>
     <section>
-      <h2>Membership Options</h2>
+      <h2 id="membershipOpt">Membership Options</h2>
       <p>At Limitless Fitness, we offer flexible membership plans to suit your needs.</p>
       <ul>
         <li>Monthly Memberships: Perfect for those who want to try us out.</li>
@@ -90,21 +99,35 @@
         <h3>Join Limitless Fitness Today!</h3>
         <p>Fill out the form below to kickstart your fitness journey:</p>
 <!--add accessibility to the form-->
-        Full Name
-        Email Address
-        Phone Number
-        Membership Type
-          Select a Membership Option
-          Monthly Membership
-          Annual Membership
-          Family & Group Plans
-        Tell us about your fitness goals:
-        Submit
+        <form method="post" action="https://wp.zybooks.com/form-viewer.php">
+          <label for="fullName">Full Name</label>
+          <input type="text" id="fullName" name="fullName">
+
+          <label for="emailAdd">Email Address</label>
+          <input type="email" id="emailAdd" name="emailAdd">
+
+          <label for="phoneNum">Phone Number</label>
+          <input type="tel" id="phoneNum" name="phoneNum">
+
+          <label for="memberType">Membership Type</label>
+          <select name="memberType" id="memberType">
+            <option value="" selected>Select a Membership Option</option>
+            <option value="monthly">Monthly Membership</option>
+            <option value="annual">Annual Membership</option>
+            <option value="family">Family & Group Plans</option>
+          </select>
+
+          <label for="comments">Tell us about your fitness goals:</label>
+          <textarea name="comments" id="comments"></textarea>
+
+          <label for="submitBtn">Submit</label>
+          <input type="submit" id="submitBtn" name="submitBtn">
+        </form>
       </section>
     </section>
   </main>
   <aside>
-    <h2>Testimonials</h2>
+    <h2 id="testimonials">Testimonials</h2>
     <q>
       Joining Limitless Fitness has completely transformed my approach to fitness. The supportive community and expert guidance have made all the difference! - Alex R.
     </q>
@@ -134,7 +157,7 @@
       </ul>
     </section>
     <section>
-      <h2>Contact Us</h2>
+      <h2 id="contact">Contact Us</h2>
       <address>
         <p>1234 HIIT St. <br>
         Mesa, AZ 85222 <br>
