--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="RJ Danforth">
-  <meta name="description" content="">
+  <meta name="description" content="Come join the Limitless Fitness Gym today! We can both regular classes aw well as personalized instruction.">
   <meta name="robots" content="all">
 
   <meta name="og:title" content="Limitless Fitness Gym">
   <meta name="og:type" content="website">
-  <meta name="og:image" content="images/facility-320w.jpg">
-  <meta name="og:url" content="#">
+  <meta name="og:image" content="https://rjdanfor.github.io/limitlessfitnessgym/images/facility-320w.jpg">
+  <meta name="og:url" content="https://rjdanfor.github.io/limitlessfitnessgym/">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@limitlessfitness">
   <meta name="twitter:creator" content="@rjdanfor">
   <meta name="twitter:title" content="Limitless Fitness Gym">
   <meta name="twitter:description" content="Come join the Limitless Fitness Gym today!">
-  <meta name="twitter:image" content="images/facility-320w.jpg">
+  <meta name="twitter:image" content="https://rjdanfor.github.io/limitlessfitnessgym/images/facility-320w.jpg">
   <meta name="twitter:image:alt" content="black and white picture of a gym with lots of different exercise equipment">
 </head>
 <body>
